<resources>
    <string name="app_name">VitiSmart</string>
    <string name="test_text">Test Text</string>
    <string name="infestationHeatmap">Your Infestation Heat Map</string>
    <string name="infestationMorePinInfo">Click on each pin to reveal more information.</string>
    <string name="heatMapConfirmBtn">Confirm Dates</string>
    <string name="posterLink"><a href="https%3A%2F%2Fcapstonedesign.org%2FCapstoneWorks%2FPublic%2FPSU%2FBD%2FCSSE%2FClass2021%2FPresentationPPT%2FPSU-BD-CSSE-Class2021-Sec-001-Team-014-11.pdf%3FautoCounter%3D1618754758603%26option%3Dopen">More About the Project</a></string>
    <string name="projDesc">This app for GBM infestation monitoring was developed by Penn State Behrend CS/SE Senior Design Team 14, under the guidance of Jonathan Liaw and to the specifications provided by Dr. Flor E. Acevedo.</string>


    <string name="tab1info">Grape berry moth larvae are easily detected early in the season by the presence of webs in young grape clusters. The larvae live inside the webs and feed on developing berries.</string>
    <string name="tab1titlee">Webbing in grape berry moth infested clusters early in the growing season</string>
    <string name="tab1credit">Photo credit: Andrew Muza, Penn State Extension</string>

    <string name="tab2info">Grape berry moth larvae build webs made out of silk strands among adjacent berries. The larvae hide inside the webs before borrowing into the grape berries. Injury of grape berry moth larvae induces red discoloration in immature berries of red cultivars.</string>
    <string name="tab2title">Webbing and red discoloration in grape berry moth infested clusters</string>
    <string name="tab2credit">Photo credit: Andrew Muza, Penn State Extension</string>

    <string name="tab3info">Injure by grape berry moth larvae induces red discoloration in immature berries of red cultivars.</string>
    <string name="tab3title">Discoloration of a grape berry moth infested berry</string>
    <string name="tab3credit">Photo credit: Andrew Muza, Penn State Extension</string>

    <string name="tab4info">Brown discoloration of grape berry moth infested berries of a white cultivar.</string>
    <string name="tab4title">Discoloration of a grape berry moth infested berry</string>
    <string name="tab4credit">Photo credit: Andrew Muza, Penn State Extension</string>

    <string name="tab5info">Wounds from grape berry moth larvae facilitate the colonization of fungi in mature grapes.</string>
    <string name="tab5title">Damage by grape berry moth larvae and fungi late in the growing season</string>
    <string name="tab5credit">Photo credit: Andrew Muza, Penn State Extension</string>

    <string name="tab6info">Eggs are small (~0.6 mm in diameter) and translucent making them difficult to detect at plain sight. Eggs are laid on grape berries throughout the growing season.</string>
    <string name="tab6title">Mature grape berry moth egg</string>
    <string name="tab6credit">Photo credit: Flor E. Acevedo, Penn State University</string>

    <string name="tab7info">Upon hatch, young larvae wander on the surface of grape berries before burrowing into them. This stage of development is the most susceptible to conventional control strategies such as insecticides. </string>
    <string name="tab7title">Young grape berry moth larva</string>
    <string name="tab7credit">Photo credit: Flor E. Acevedo, Penn State University</string>

    <string name="tab8info">Mature larvae are about 10 mm long; they get out of the berries, wrap themselves into a folded piece of leaf sealed with silk and cut the leaf piece out to drop and pupate in the soil.</string>
    <string name="tab8title">Fully developed grape berry moth larva</string>
    <string name="tab8credit">Photo credit: Jody Timer, Penn State Extension</string>

    <string name="tab9info">Pupa develops on debris in the soil before the moths emerge. The grape berry moth <i>Paralobesia viteana</i> overwinters in the pupa stage. </string>
    <string name="tab9title">Grape berry moth pupa</string>
    <string name="tab9credit">Photo credit: Flor E. Acevedo, Penn State University</string>

    <string name="tab10info">Adults moths are small with a wingspan of 8-13 mm and are most active at dusk.</string>
    <string name="tab10title">Grape berry moth adult</string>
    <string name="tab10credit">Photo credit: Flor E. Acevedo, Penn State University</string>

    <string name="mapLink"><a href="google.com">Tap to View Image</a></string>

    <string-array name="geo_options">
        <item>Current GPS Location</item>
        <item>Location Data From Image</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="years">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
    </string-array>

    <string-array name="filter_options">
        <item>Date(newest)</item>
        <item>Date(oldest)</item>
        <item>Most Popular</item>
    </string-array>

    <string name="title_activity_main_drawer">MainActivityDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>